# serial

./: CMakeLists.txt  README.md
source/include/: serial.hpp  serialConfig.h.in
source/src/: main.cpp  serial.cpp
